# browser-hive-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  ERROR_HANDLING.md  GRACEFUL_SHUTDOWN.md  K8S_DEPLOYMENT.md  LOCAL_DEV.md  MIDDLEWARE_EXAMPLES.md  Makefile  README.md  docker-compose.yml  test-graceful-shutdown.sh
crates/common/: Cargo.toml
crates/common/src/: browser_middleware.rs  config.rs  lib.rs  proxy.rs  request_context.rs  session.rs  types.rs  utils.rs  wait_strategy.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: local_worker_discovery.rs  main.rs  service.rs  worker_discovery.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: coordinator.proto  worker.proto
crates/proto/src/: lib.rs
crates/tokio-cancellation-ext/: Cargo.toml
crates/tokio-cancellation-ext/src/: async_ext.rs  error.rs  lib.rs  sync_ext.rs
crates/worker/: Cargo.toml
crates/worker/src/: browser_pool.rs  lib.rs  main.rs  metrics.rs  providers.rs  service.rs
ops/docker/local/: coordinator.dockerfile  worker.dockerfile
src/: lib.rs
