[package]
name = "browser-hive-common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
humantime-serde = "1.1"
headless_chrome = { workspace = true }
tokio-cancellation-ext = { path = "../tokio-cancellation-ext" }
