[package]
name = "browser-hive-coordinator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "coordinator"
path = "src/main.rs"

[dependencies]
browser-hive-common = { path = "../common" }
browser-hive-proto = { path = "../proto" }
tokio-cancellation-ext = { path = "../tokio-cancellation-ext" }

tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

kube = { workspace = true }
k8s-openapi = { workspace = true }
uuid = { workspace = true }
