[package]
name = "browser-hive-worker"
version.workspace = true
edition.workspace = true

[lib]
name = "browser_hive_worker"
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
browser-hive-common = { path = "../common" }
browser-hive-proto = { path = "../proto" }
tokio-cancellation-ext = { path = "../tokio-cancellation-ext" }

tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

headless_chrome = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
sha2 = "0.10"
libc = "0.2"
